feat: 내담자 관리 시스템 완성 및 API 통합 완료
- 내담자 총 상담 횟수 표시 오류 해결
- 잘못된 API 엔드포인트를 올바른 스케줄 API로 수정
- 실제 스케줄 데이터 기반으로 정확한 상담 횟수 계산
- 공통 LoadingSpinner 컴포넌트 통일 완료
- 문서 현행화 (TODO.md, SYSTEM_STATUS.md 업데이트)

주요 변경사항:
- ClientComprehensiveManagement.js: API 엔드포인트 수정 및 상담 횟수 계산 로직 개선
- loadConsultations(): /api/schedules?userId=0&userRole=ADMIN 사용
- 스케줄 데이터를 상담 이력 형태로 변환하여 정확한 계산
- 모든 로딩 UI를 LoadingSpinner 컴포넌트로 통일
- 진행률 52.6% 달성 (20/38 항목 완료)